// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Table capabilities {
  id integer [primary key, increment]
  label varchar(20)
  deleted_at datetime
}

Table roles {
  id integer [primary key, increment]
  label varchar(10)
  deleted_at datetime
}

Table role_capabilities {
  role_id integer [ref: > roles.id]
  capability_id integer [ref: > capabilities.id]
  deleted_at datetime

  indexes {
    (role_id, capability_id) [pk]
  }
}

Table users {
  id integer [primary key, increment]
  role_id integer [ref: > roles.id]
  firstname varchar(30)
  lastname varchar(30)
  email varchar(30)
  deleted_at datetime
  hashed_password varchar(255)
}

Tables user_sessions {
  id integer [primary key, increment]
  key varchar(255)
  user_id [ref: > users.id]
}

Table workspaces {
  id integer [primary key, increment]
  title varchar(50)
  deleted_at datetime
}

Table workspace_settings {
  id integer [primary key, increment]
  workspace_id integer [ref: > workspaces.id]
  config JSON
}

Table workspace_capabilities {
  id integer [primary key, increment]
  label varchar(20)
  deleted_at datetime
}

Table workspace_roles {
  id integer [primary key, increment]
  label varchar(10)
  deleted_at datetime
}

Table workspace_role_capabilities {
  workspace_role_id integer [ref: > workspace_roles.id]
  workspace_capability_id integer [ref: > workspace_capabilities.id]
  deleted_at datetime

  indexes {
    (workspace_role_id, workspace_capability_id) [pk]
  }
}

Table workspace_users {
  workspace_id integer [ref: > workspaces.id]
  user_id integer [ref: > users.id]
  workspace_role_id integer [ref: > workspace_roles.id]
  deleted_at datetime

  indexes {
    (workspace_id, user_id) [pk]
  }
}

Table boards {
  id integer [primary key, increment]
  workspace_id integer [ref: > workspaces.id]
  created_at datetime
  deleted_at datetime
}

Table board_settings {
  id integer [primary key, increment]
  board_id integer [ref: > boards.id]
  config JSON
}

Table board_views {
  id integer [primary key, increment]
  label varchar(20)
  board_id integer [ref: > boards.id]
  deleted_at datetime
}

Table board_view_settings {
  id integer [primary key, increment]
  board_view_id integer [ref: > board_views.id]
  config JSON
}

Table board_column_types {
  id integer [primary key, increment]
  label varchar(20)
  deleted_at datetime
}

Table board_columns {
  id integer [primary key, increment]
  label varchar(20)
  board_id integer [ref: > boards.id]
  board_column_type_id integer [ref: > board_column_types.id]
  deleted_at datetime
}

Table board_columns_settings {
  id integer [primary key, increment]
  board_columns_id integer [ref: > board_columns.id]
  config JSON
}

Table board_tasks {
  id integer [primary key, increment]
  board_id integer [ref: > boards.id]
  position integer
  created_at datetime
  updated_at datetime
  deleted_at datetime

  indexes {
    (board_id, position) [unique]
  }
}

Table board_task_assigned_users {
  workspace_user_id integer [ref: > workspace_users.user_id]
  board_task_id integer [ref: > board_tasks.id]

  indexes {
    (workspace_user_id, board_task_id) [unique]
  }
}

Table board_task_settings {
  id integer [primary key, increment]
  board_task_id integer [ref: > board_tasks.id]
  config JSON
}

Table board_task_columns {
  id integer [primary key, increment]
  board_column_id integer [ref: > board_columns.id]
  board_task_id integer [ref: > board_tasks.id]
  value JSON
  position integer
  deleted_at datetime

  indexes {
    (board_column_id, board_task_id) [unique]
  }
}

Table board_task_column_settings {
  id integer [primary key, increment]
  board_task_column_id integer [ref: > board_task_columns.id]
  config JSON
}